# kdictionary-lingoes

./: .gitignore  CMakeLists.txt  README.md  kdictionary-lingoes.cpp  kdictionary-lingoes.h  kdictionary-lingoes.kdev4  lingoes.cpp  lingoes.h  main.cpp
